# calibration_sandbox

./: LICENSE.txt  MANIFEST.in  README.md  cal.py  caldemo.ipynb  caltable_example.ipynb  jones.py  pyproject.toml
.github/ISSUE_TEMPLATE/: user-story.md
src/calviper/: base.py  calqueue.py  jones.py  table.py
